/*
 * CHANGELOG.
 */

04212002 - Initial work to add a Sound_Seek() API. Removed the NEEDSEEK
           sample flag (replaced it with CANSEEK).
04082002 - Cleaned up the archive support in playsound a little bit, and 
           fixed a PhysicsFS bug in the process.
03252002 - Win32 patches and fixes from Tyler Montbriand: handled "inline"
           keyword, fixed SNDDBG macros in mpglib, and renamed a conflicting
           file (decoders/mpglib/common.c to decoders/mpglib/mpglib_common.c).
03172002 - Removed an unneeded #include in mpglib that broke build on BeOS.
           mpglib seems to work find on BeOS. Reworked some of mpglib.c so we
           can determine the audio format when accepting the data stream. Some
           other minor cleanups here and there.
03162002 - Tied the PhysicsFS code into the build system (code disabled if
           physfs not found or --disable-physfs passed to ./configure.)
03152002 - Added PhysicsFS support to playsound, so you can play sound files
           that are in ZIP files without unzipping them. Needs to be merged
           into build system (I was just testing my PhysFS->RWops glue code).
03142002 - Changed configure script's --enable-vorbis to --enable-ogg. Removed
           global state variable from mpglib, so it should be reentrant now
           (patches sent to mpglib's actual maintainer). playsound can now
           read from stdin.
03102002 - Added a FIXME note to decoders/mpglib.c. playsound now reports
           errors in the thread where they occured, which also fixes a double
           report of errors during predecoding. Removed all calls to exit() in
           mpglib. These calls now report errors correctly to SDL_sound, which
           passes them on to the application (patch also sent to mpglib's
           actual maintainer). Replaced all stderr chatter in mpglib with
           Sound_SetError() calls.
03072002 - decoders/mpglib.c now disregards ID3 tags instead of passing them